# backend-django

./: db.sqlite3  package-lock.json  pyproject.toml
common/: forms.py  urls.py  views.py
config/: settings.py  urls.py
pybo/: admin.py  forms.py  models.py  urls.py  views.py
pybo/migrations/: 0001_initial.py  0002_answer_author_question_author.py  0003_answer_modify_date_question_modify_date.py  0004_comment.py  0005_answer_voter_question_voter_alter_answer_author_and_more.py
pybo/templatetags/: pybo_filter.py
pybo/views/: answer_views.py  base_views.py  comment_views.py  vote_views.py
static/: bootstrap.min.css
templates/: base.html  form_errors.html
templates/pybo/: answer_form.html  comment_form.html  question_detail.html  question_form.html  question_list.html
users/: models.py
users/migrations/: 0001_initial.py
