[tool.poetry]
name = "backend-django"
version = "0.1.0"
description = ""
authors = ["jaeupsu <hyeongs2323@gmail.com>"]
readme = "README.md"
packages = [{include = "backend_django"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.4"
selenium = "^4.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
